--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernatee.sql=debug
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.filter.dispatcher-types=request
